Adding Some Changes

--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,26 @@
 {
-    "name": "AD Blocker",
-    "version": "1.0.0",
-    "manifest_version": 3,
-    "permission": [
-        "declarativeNetRequest",
-         "declarativeNetRequestFeedback",
-        "declarativeNetRequestWithHostAccess"
-    ],
-    "declarative_net_request":{
-        "rule_resources":[
-           {
-             "id" : "ruleset_1",
-             "enabled": true,
-             "path": "rules.json"
-           }
-        ]
-        
-    }
+  "name": "AD Blocker",
+  "version": "1.0.0",
+  "manifest_version": 3,
+  "description": "A basic AD Blocker Extension",
+  "icons": {
+    "16": "icons/icon-16.png",
+    "32": "icons/icon-32.png",
+    "128": "icons/icon-128.png"
+  },
+  "permission": [
+    "declarativeNetRequest",
+    "declarativeNetRequestFeedback",
+    "declarativeNetRequestWithHostAccess"
+  ],
+
+  "declarative_net_request": {
+    "rule_resources": [
+      {
+        "id": "ruleset_1",
+        "enabled": true,
+        "path": "rules.json"
+      }
+    ]
+  }
 }
